--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Глейси</title>
-        <link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900,500&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="inner-page">
         <header class="main-header">
@@ -15,7 +15,7 @@
                         <a href="index.html"><img src="img/logo.svg" width="149" height="62" alt="Gllacy"></a>
                     </div>
                     <nav class="main-navigation">
-                        <ul>
+                        <ul class="catalog-list">
                             <li class="active">
                                 <a>Каталог</a>
                             </li>
@@ -211,8 +211,8 @@
                     <button class="btn-form" type="submit">Применить</button>
                 </form>
             </div>
-            <article class="catalog-product">
-                <div class="product-item">
+            <div class="catalog-product">
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -220,9 +220,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">310 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -234,12 +234,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">310 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -247,9 +247,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">380 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -261,12 +261,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">380 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -274,9 +274,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">355 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -288,12 +288,12 @@
                     </div>
                         <div class="price-title">
                         <span class="price">355 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -301,9 +301,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">415 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -315,12 +315,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">415 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -328,9 +328,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">325 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное с брусничным джемом</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -342,12 +342,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">325 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное с брусничным джемом</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -355,9 +355,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">420 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочно-черничное с цельными ягодами черники</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -369,12 +369,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">420 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочно-черничное с цельными ягодами черники</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -382,9 +382,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">375 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочно-лимонное с карамельной присыпкой</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -396,12 +396,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">375 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочно-лимонное с карамельной присыпкой</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -409,9 +409,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">320 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное с шоколадной стружкой</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -423,12 +423,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">320 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное с шоколадной стружкой</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -436,9 +436,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">440 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочно-ванильное с кусочками шоколада</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -450,12 +450,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">440 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочно-ванильное с кусочками шоколада</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -463,9 +463,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">435 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочноe с ментоловым сиропом</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -477,12 +477,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">435 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочноe с ментоловым сиропом</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -490,9 +490,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">355 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное с кусочками черного шоколада</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -504,12 +504,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">355 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное с кусочками черного шоколада</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-                <div class="product-item">
+                </article>
+                <article class="product-item">
                     <div class="product-hover">
                         <div class="product-inner">
                             <div class="preview">
@@ -517,9 +517,9 @@
                             </div>
                             <div class="price-title">
                                 <span class="price">420 </span><span class="ruble">P/кг</span>
-                                <p class="product-title">
+                                <h2 class="product-title">
                                     <a class="product-title">Сливочное с мятным сиропом</a>
-                                </p>
+                                </h2>
                             </div>
                             <div class="btn-preview">
                               <a href="#" class="btn">Быстрый просмотр</a>
@@ -531,12 +531,12 @@
                     </div>
                     <div class="price-title">
                         <span class="price">420 </span><span class="ruble">P/кг</span>
-                        <p class="product-title">
+                        <h1 class="product-title">
                             <a class="product-title">Сливочное с мятным сиропом</a>
-                        </p>
+                        </h1>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
             <div class="pagination">
                 <span class="pagination-btn-back"></span>
                 <ul>
